[gd_scene load_steps=7 format=2]

[ext_resource path="res://Fonts/hgss_health.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Fonts/pokemon-ds-font.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Graphics/Pictures/Battle/databox_hgss.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Battle/EnemyDatabox.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=4]
size = 8
extra_spacing_top = 3
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 2 )

[node name="EnemyDatabox" type="Sprite"]
position = Vector2( 0, 55 )
texture = ExtResource( 3 )
centered = false
region_enabled = true
region_rect = Rect2( 1, 82, 122, 35 )
script = ExtResource( 4 )

[node name="HealthBar" type="Sprite" parent="."]
position = Vector2( 50, 24 )
scale = Vector2( 16, 1 )
texture = ExtResource( 3 )
centered = false
region_enabled = true
region_rect = Rect2( 2, 13, 3, 3 )

[node name="Level" type="Label" parent="."]
margin_left = 82.0
margin_top = 10.0
margin_right = 106.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.286275, 0.286275, 0.286275, 1 )
custom_colors/font_color_shadow = Color( 0.729412, 0.729412, 0.729412, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 4 )
text = "100"
valign = 1

[node name="NameContainer" type="MarginContainer" parent="."]
margin_left = 2.0
margin_top = 5.0
margin_right = 81.0
margin_bottom = 21.0
__meta__ = {
"_edit_group_": true
}

[node name="Name" type="Label" parent="NameContainer"]
margin_right = 79.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.286275, 0.286275, 0.286275, 1 )
custom_colors/font_color_shadow = Color( 0.729412, 0.729412, 0.729412, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 1
custom_fonts/font = SubResource( 5 )
text = "Pokemon 2"
valign = 1

[node name="GenderSymbol" type="Sprite" parent="."]
position = Vector2( 65, 8 )
texture = ExtResource( 3 )
centered = false
region_enabled = true
region_rect = Rect2( 2, 1, 7, 11 )
